fix footer spacing

--- a/source/stylesheets/style.css
+++ b/source/stylesheets/style.css
@@ -178,6 +178,7 @@ margin-top: 2px;
   height: 248px;
   border: 0;
   margin-bottom: -6px;
+  margin-top: 10px;
 }
 
 #content {
